--- a/VvADLab1.ipynb
+++ b/VvADLab1.ipynb
@@ -1233,7 +1233,7 @@
    "metadata": {},
    "source": [
     "**Вывод:**\n",
-    "В ходе выполнения лабораторной работы были получены навыки обработки данных и их первичного анализа. Для обработки при помощи библиотеки pandas был загружен набор данных с прослушанными треками пользователя. Были удалены пропуски в данных, исправлены названия столбцов и удалены дубликаты. Были придуманы и построены две сводные таблицы и произведена группировка данных по жанру. Из сводной таблицы минимальных времён прослушивания музыки для каждого дня в городах видно, что как правило это значения возле 8 часов. Скорее всего в это время начинался сбор информации. Из группировки данных по жанру с применением агрегатной функции sum мы узнали, что самым популярным жанром ожидаемо является “pop”. Из сводной таблицы, показывающей количество прослушиваний по дням недели можно увидеть, что чаще всего пользователи прослушивали музыку в пятницу."
+    "В ходе выполнения работы были получены навыки обработки данных и их первичного анализа. Для обработки при помощи библиотеки pandas был загружен набор данных с прослушанными треками пользователя. Были удалены пропуски в данных, исправлены названия столбцов и удалены дубликаты. Были придуманы и построены две сводные таблицы и произведена группировка данных по жанру. Из сводной таблицы минимальных времён прослушивания музыки для каждого дня в городах видно, что как правило это значения возле 8 часов. Скорее всего в это время начинался сбор информации. Из группировки данных по жанру с применением агрегатной функции sum мы узнали, что самым популярным жанром ожидаемо является “pop”. Из сводной таблицы, показывающей количество прослушиваний по дням недели можно увидеть, что чаще всего пользователи прослушивали музыку в пятницу."
    ]
   },
   {
