--- a/VvADLab2.ipynb
+++ b/VvADLab2.ipynb
@@ -5,7 +5,6 @@
    "id": "7ba98a45",
    "metadata": {},
    "source": [
-    "# Лабараторная работа №2\n",
     "# Анализ связей между признаками двумерного набора данных"
    ]
   },
@@ -1442,7 +1441,7 @@
    "id": "28fdbfab",
    "metadata": {},
    "source": [
-    "**Вывод:** в ходе выполнения лабораторной работы были изучены методы нахождения связей между признаками двумерного набора данных. Был импортирован и обработан датафрейм, содержащий информацию о посетителях фитнес клуба 5и7gym_churn. На основе данного датасета были построены точечные диаграммы рассеяния, вычеслены коэффициенты корреляции Пирса между парами наборов значений и построена тепловая карта корреляции. В ходе исследования данных было выяснено, что в данном датафрейме связь присутствует между двумя парами столбцов Avg_class_frequency_total (Общая средняя частота посещений) и Avg_class_frequency_current_month (Средняя частота посещений в текущем месяце), и Contract_period (Длительность текущего абонемента) и Month_to_end_contract (Количество месяцев до окончания абонемента)."
+    "**Вывод:** в ходе выполнения работы были изучены методы нахождения связей между признаками двумерного набора данных. Был импортирован и обработан датафрейм, содержащий информацию о посетителях фитнес клуба 5и7gym_churn. На основе данного датасета были построены точечные диаграммы рассеяния, вычеслены коэффициенты корреляции Пирса между парами наборов значений и построена тепловая карта корреляции. В ходе исследования данных было выяснено, что в данном датафрейме связь присутствует между двумя парами столбцов Avg_class_frequency_total (Общая средняя частота посещений) и Avg_class_frequency_current_month (Средняя частота посещений в текущем месяце), и Contract_period (Длительность текущего абонемента) и Month_to_end_contract (Количество месяцев до окончания абонемента)."
    ]
   },
   {
