--- a/VvADLab3.ipynb
+++ b/VvADLab3.ipynb
@@ -5,7 +5,6 @@
    "id": "7ba98a45",
    "metadata": {},
    "source": [
-    "# Лабараторная работа №3\n",
     "# Кластеризация данных"
    ]
   },
@@ -1440,7 +1439,7 @@
    "id": "64592bbd",
    "metadata": {},
    "source": [
-    "**Вывод:** в ходе выполнения лабораторной работы были изучены алгоритмы и методы кластерного анализа. Над набором данных 5gym_churn была проведена кластеризация иерархическим агломеративным методом и методом k-средних. Было выявлено 5 кластеров - \"Прибыльные клиенты\", \"Далеко живущие люди\", \"Надёжные клиенты\", \"Ненадёжные клиенты\" и \"Скрытные люди\"."
+    "**Вывод:** в ходе выполнения работы были изучены алгоритмы и методы кластерного анализа. Над набором данных 5gym_churn была проведена кластеризация иерархическим агломеративным методом и методом k-средних. Было выявлено 5 кластеров - \"Прибыльные клиенты\", \"Далеко живущие люди\", \"Надёжные клиенты\", \"Ненадёжные клиенты\" и \"Скрытные люди\"."
    ]
   },
   {
