--- a/VvADLab5.ipynb
+++ b/VvADLab5.ipynb
@@ -5,7 +5,6 @@
    "id": "7ba98a45",
    "metadata": {},
    "source": [
-    "# Лабараторная работа №5\n",
     "# Проведение A/B тестирования"
    ]
   },
@@ -1856,7 +1855,7 @@
    "id": "cd93ddda",
    "metadata": {},
    "source": [
-    "**Вывод:** В ходе выполнения лабораторной работы были изучены алгоритмы для проведения A/B тестирования для принятия решений. Для подтверждения корректности механизма проведения A/B-теста перед ним было проведено A/A тестирование, которое выявило отсутствие значимой разницы между долями для всех событий в файле logs_exp.csv. Также были получены 90, 95, 99 перцентили числа заказов на пользователя по таблице orders.csv."
+    "**Вывод:** В ходе выполнения работы были изучены алгоритмы для проведения A/B тестирования для принятия решений. Для подтверждения корректности механизма проведения A/B-теста перед ним было проведено A/A тестирование, которое выявило отсутствие значимой разницы между долями для всех событий в файле logs_exp.csv. Также были получены 90, 95, 99 перцентили числа заказов на пользователя по таблице orders.csv."
    ]
   },
   {
